--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,20 @@
 project:
   type: website  # or blog if you're building a blog
 
+website:
+  title: "today"
+  navbar:
+    left:
+      - href: hello.qmd
+        text: Home
+      - about.qmd
+
+format:
+  html:
+    theme: cosmo
+    css: styles.css
+    toc: true
+
 # Optional: Specify output format
 output:
   html:
