--- a/.github/workflows/quarto-gh-pages.yml
+++ b/.github/workflows/quarto-gh-pages.yml
@@ -1,4 +1,4 @@
-name: Deploy Quarto Website
+name: Quarto Publish
 
 on:
   push:
@@ -10,11 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout the code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - name: Set up Node.js (use Node.js 20)
+        uses: actions/setup-node@v3
         with:
           node-version: '20'
 
@@ -23,6 +23,10 @@ jobs:
           sudo apt-get install gdebi-core
           wget https://github.com/quarto-dev/quarto-cli/releases/download/v1.3.340/quarto-1.3.340-linux-amd64.deb
           sudo gdebi --non-interactive quarto-1.3.340-linux-amd64.deb
+
+      - name: Install Python Dependencies
+        run: |
+          python3 -m pip install jupyter nbformat
 
       - name: Render the Quarto site
         run: quarto render
